syntax = "proto2";//指定版本信息，不指定会报错
package buffer; //package声明符
message CGLoadingRoleProto {
  optional int32 msgType=1 [default = 2002];//协议类型
  optional int32 stage=2;//关卡
}